# HW_web_13

./: README.md
DJANGO_12/: .gitignore  README.md  pyproject.toml  requirements.txt
DJANGO_12/hw10_project/: manage.py
DJANGO_12/hw10_project/hw10_project/: settings.py  urls.py
DJANGO_12/hw10_project/quotes/: forms.py  models.py  urls.py  views.py
DJANGO_12/hw10_project/quotes/migrations/: 0001_initial.py
DJANGO_12/hw10_project/quotes/static/quotes/: style.css
DJANGO_12/hw10_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html  quotes_by_tag.html
DJANGO_12/hw10_project/quotes/templatetags/: extract.py
DJANGO_12/hw10_project/users/: forms.py  urls.py  views.py
DJANGO_12/hw10_project/users/templates/users/: login.html  logout.html  register.html
DJANGO_12/hw10_project/utils/: migration.py
REST_API/: main.py  pyproject.toml  requirements.txt
REST_API/postgres-data/base/1/: pg_internal.init
REST_API/postgres-data/base/16384/: 16404  16405  16411  16413  pg_internal.init
REST_API/postgres-data/base/5/: pg_internal.init
REST_API/postgres-data/global/: pg_control  pg_internal.init
REST_API/postgres-data/pg_stat/: pgstat.stat
REST_API/src/repository/: contacts.py  users.py
REST_API/src/routes/: auth.py  contacts.py  users.py
REST_API/src/schemas/: user.py
REST_API/src/services/: auth.py  email.py
REST_API/src/services/templates/: reset_password.html
