[tool.poetry]
name = "hw-web-10"
version = "0.1.0"
description = ""
authors = ["SvitLanaTy <stymchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
pillow = "^10.3.0"
django-environ = "^0.11.2"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
